--- a/src/scss/_ui.scss
+++ b/src/scss/_ui.scss
@@ -1,1 +1,9 @@
 // user interface common styles
+// smooth shadow
+.shadow {
+  box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
+}
+// border-radius: 10px
+.br10 {
+  border-radius: 0.625rem;
+}
