layout: created sidebar
Created layout for Sidebar component
Also a little changes in App tsx/scss files where i set up
width of main elements on page

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,11 @@
+@import "./scss/color-vars";
+
 .app {
   height: 100vh;
+  display: flex;
+
+  main {
+    flex: 0 1 81%;
+    background-color: $LTbackground;
+  }
 }
