add: main content left side, more in description
Created additional HTML structure for correct display
left side main content, also styled it.
In ui.scss create two different new classes to not violate DRY.
Applied new styles to WeeklyResults, TaskList components.
Added new images for TaskItem.
Make adaptive layout for Header component, also added TODO list to App.jsx

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -52,3 +52,12 @@
     }
   }
 }
+
+// media queries
+@media (max-width: 840.99px) {
+  .header__user {
+    p {
+      display: none;
+    }
+  }
+}
