--- a/src/scss/_ui.scss
+++ b/src/scss/_ui.scss
@@ -7,3 +7,17 @@
 .br10 {
   border-radius: 0.625rem;
 }
+// component styles
+.user-component {
+  padding: 1.25rem;
+  background-color: $LTbackground;
+  border-radius: 0.625rem;
+  box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
+}
+// h3 component title
+.h3-title {
+  font-size: 1.125rem;
+  font-weight: 600;
+  color: $accent;
+  margin-bottom: 1.25rem;
+}
