--- a/src/App.scss
+++ b/src/App.scss
@@ -13,4 +13,11 @@
   &__content {
     display: flex;
   }
+
+  &__left {
+    flex: 0 1 53%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.875rem;
+  }
 }
