add: transference all into a MainPage, read desc
Transference all into a MainPage cuz finished that, maked adaptive layout
of MainPage component to 768px.
In index.scss decrease font-size and paddings by breakpoints.
Added burger-menu in Header component which turn on on 998.99px.
Created TodayInfo, TodayFact components.
Imported images for TodayInfo component, created and added a chart into
ProgressChart component.
Make circles in WeeklyResults adaptive, from px to rem.

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@
 
   &__content {
     display: flex;
+    gap: 1.875rem;
   }
 
   &__left {
@@ -19,5 +20,19 @@
     display: flex;
     flex-direction: column;
     gap: 1.875rem;
+  }
+
+  &__right {
+    flex: 0 1 47%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.875rem;
+  }
+}
+
+// media queries
+@media (max-width: 998.99px) {
+  .main {
+    flex: 0 1 100%;
   }
 }
