--- a/src/components/WeeklyResults/WeeklyResults.scss
+++ b/src/components/WeeklyResults/WeeklyResults.scss
@@ -22,8 +22,8 @@
 
   &__circle {
     border: 1px solid $accent;
-    width: 100px;
-    height: 100px;
+    width: 6.25rem;
+    height: 6.25rem;
     border-radius: 50%;
     font-size: 2.25rem;
     font-weight: 600;
