--- a/src/components/TodayInfo/TodayInfo.scss
+++ b/src/components/TodayInfo/TodayInfo.scss
@@ -27,3 +27,12 @@
     align-items: center;
   }
 }
+
+// media queries
+@media (max-width: 425.99px) {
+  .today-info {
+    &__content {
+      flex-direction: column;
+    }
+  }
+}
