--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,7 @@
 @import "../../scss/color-vars";
 
 .header {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
