layout: created UserPage component, read desc
UserPage full adaptive component, import new test-image for test.
Also transfered Header component from MainPage to global App component.
Add new black color to _color-vars.scss files and
apllied to body background color

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,10 @@
 @import "./scss/fonts";
 @import "./scss/ui";
 
+body {
+  background-color: $LTbackground;
+}
+
 // index.scss styles
 @media (max-width: 1285.99px) {
   html {
