--- a/src/scss/_color-vars.scss
+++ b/src/scss/_color-vars.scss
@@ -4,6 +4,7 @@ $accent: #29a19c;
 $subscribe: #ecca75;
 $delete: #f05454;
 $white: #ffffff;
+$black: #000000;
 // light theme
 $LTwhite: #ffffff;
 $LTdark: #282846;
