--- a/src/components/SidebarAddCategory/SidebarAddCategory.scss
+++ b/src/components/SidebarAddCategory/SidebarAddCategory.scss
@@ -13,14 +13,17 @@
   align-items: center;
 
   &__content {
-    display: flex;
-    flex-direction: column;
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1.25rem;
+    }
 
     input {
       padding: 0.75rem 0.9375rem;
       border: 1px solid rgba($LTdark, 0.2);
       border-radius: 0.4375rem;
-      margin-bottom: 1.25rem;
 
       &::placeholder {
         color: #000000;
@@ -31,7 +34,12 @@
       color: $white;
       padding: 0.625rem 0.9375rem;
       background-color: $accent;
+      width: 100%;
     }
+  }
+
+  &__error {
+    color: $delete;
   }
 }
 
