--- a/src/scss/_ui.scss
+++ b/src/scss/_ui.scss
@@ -27,6 +27,8 @@
   border: 1px solid rgba(40, 40, 70, 0.1);
   border-radius: 0.625rem;
   font-size: 0.875rem;
+  width: 100%;
+
   color: #000000;
 
   &::placeholder {
@@ -38,6 +40,7 @@
   border-radius: 0.5rem;
   padding: 0.625rem 1.5625rem;
   font-weight: 600;
+  width: 100%;
   color: $LTwhite;
 }
 // error form styles
