--- a/src/scss/_ui.scss
+++ b/src/scss/_ui.scss
@@ -10,21 +10,24 @@
 // component styles
 .user-component {
   padding: 1.25rem;
-  background-color: $LTbackground;
+  background-color: var(--component-bg);
+  transition: background-color 0.3s ease-in-out;
   border-radius: 0.625rem;
   box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
 }
+
 // h3 component title
 .h3-title {
   font-size: 1.125rem;
   font-weight: 600;
-  color: $accent;
+  color: var(--accent);
   margin-bottom: 1.25rem;
 }
+
 // item-styles
 .modal-field-styles {
   padding: 0.5rem 0.9375rem;
-  border: 1px solid rgba(40, 40, 70, 0.1);
+  border: 1px solid var(--border-color);
   border-radius: 0.625rem;
   font-size: 0.875rem;
 
@@ -34,14 +37,16 @@
     color: #000000;
   }
 }
+
 // button styles
 .button {
   border-radius: 0.5rem;
   padding: 0.625rem 1.5625rem;
   font-weight: 600;
-  color: $LTwhite;
+  color: var(--white);
 }
+
 // error form styles
 .form-error {
-  color: $delete;
+  color: var(--delete);
 }
