--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,10 +10,10 @@
   &__new-task {
     padding: 0.625rem 1.5625rem;
     font-weight: 600;
-    color: $LTwhite;
-    background-color: $accent;
+    background-color: var(--accent);
     display: flex;
     align-items: center;
+    color: #fafafa;
 
     svg {
       margin-right: 0.625rem;
@@ -23,6 +23,11 @@
   &__user {
     display: flex;
     align-items: center;
+
+    p {
+      color: var(--content-text-color);
+      transition: color 0.3s ease-in-out;
+    }
 
     img {
       width: 2.5rem;
@@ -45,14 +50,14 @@
       position: absolute;
       top: 20%;
       left: 0;
-      background-color: $LTdark;
+      background-color: var(--dark);
       width: 100%;
       height: 2px;
     }
 
     span {
       display: inline-block;
-      background-color: $LTdark;
+      background-color: var(--dark);
       width: 100%;
       height: 2px;
     }
@@ -62,7 +67,7 @@
       position: absolute;
       bottom: 20%;
       left: 0;
-      background-color: $LTdark;
+      background-color: var(--dark);
       width: 100%;
       height: 2px;
     }
@@ -72,7 +77,7 @@
     position: relative;
     min-width: 24px;
     min-height: 24px;
-    background-color: $LTbackground;
+    background-color: var(--component-bg);
     border-radius: 5px;
 
     &::before {
@@ -83,8 +88,8 @@
       transform: translate(-50%, -75%) rotate(135deg);
       width: 40%;
       height: 40%;
-      border-top: 2px solid $accent;
-      border-right: 2px solid $accent;
+      border-top: 2px solid var(--accent);
+      border-right: 2px solid var(--accent);
       margin-right: 40%;
     }
   }
