--- a/src/components/TaskItem/TaskItem.scss
+++ b/src/components/TaskItem/TaskItem.scss
@@ -4,9 +4,11 @@
   &__item {
     position: relative;
     padding: 0.9375rem;
-    border: 1px solid rgba(40, 40, 70, 0.1);
+    border: 1px solid var(--border-color);
+    transition: border 0.3s ease-in-out;
     font-size: 0.875rem;
-    color: $LTdark;
+    color: var(--content-text-color);
+    transition: color 0.3s ease-in-out;
     height: 3.125rem;
 
     display: flex;
@@ -42,7 +44,7 @@
     }
 
     .task-list__checkbox + label::before {
-      border-color: $accent;
+      border-color: var(--accent);
       background-image: url("../../images/check.svg");
     }
   }
@@ -65,7 +67,7 @@
       height: 1.25rem;
       flex-shrink: 0;
       flex-grow: 0;
-      border: 1px solid $accent;
+      border: 1px solid var(--accent);
       border-radius: 0.3125rem;
       margin-right: 0.625rem;
       background-repeat: no-repeat;
