--- a/src/components/TodayInfo/TodayInfo.scss
+++ b/src/components/TodayInfo/TodayInfo.scss
@@ -15,14 +15,16 @@
 
   &__item-title {
     font-size: 0.875rem;
-    color: $LTdark;
+    color: var(--content-text-color);
+    transition: color 0.3s ease-in-out;
     margin-bottom: 0.3125rem;
   }
 
   &__value {
     font-size: 1.5625rem;
     font-weight: 600;
-    color: $LTdark;
+    color: var(--content-text-color);
+    transition: color 0.3s ease-in-out;
     display: flex;
     align-items: center;
   }
