--- a/src/components/ToggleMenu/ToggleMenu.scss
+++ b/src/components/ToggleMenu/ToggleMenu.scss
@@ -16,7 +16,8 @@
 
     p {
       font-size: 0.75rem;
-      color: $LTdark;
+      color: var(--content-text-color);
+      transition: color 0.3s ease-in-out;
     }
 
     &:not(:last-child) {
