--- a/src/components/WeeklyResults/WeeklyResults.scss
+++ b/src/components/WeeklyResults/WeeklyResults.scss
@@ -4,7 +4,8 @@
   &__info-title {
     font-size: 0.75rem;
     font-weight: 600;
-    color: $LTdark;
+    color: var(--content-text-color);
+    transition: color 0.3s ease-in-out;
     margin-bottom: 0.625rem;
   }
 
@@ -21,14 +22,14 @@
   }
 
   &__circle {
-    border: 1px solid $accent;
+    border: 1px solid var(--accent);
     width: 6.25rem;
     height: 6.25rem;
     border-radius: 50%;
     font-size: 2.25rem;
     font-weight: 600;
     text-align: center;
-    color: $accent;
+    color: var(--accent);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -37,7 +38,8 @@
     span {
       font-size: 0.75rem;
       font-weight: 400;
-      color: $LTdark;
+      color: var(--content-text-color);
+      transition: color 0.3s ease-in-out;
     }
   }
 }
