--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -48,16 +48,16 @@
     &::before {
       content: "";
       position: absolute;
-      top: 20%;
+      top: 25%;
       left: 0;
-      background-color: var(--dark);
+      background-color: var(--accent);
       width: 100%;
       height: 2px;
     }
 
     span {
       display: inline-block;
-      background-color: var(--dark);
+      background-color: var(--accent);
       width: 100%;
       height: 2px;
     }
@@ -67,7 +67,7 @@
       position: absolute;
       bottom: 20%;
       left: 0;
-      background-color: var(--dark);
+      background-color: var(--accent);
       width: 100%;
       height: 2px;
     }
