--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -14,6 +14,12 @@
     margin-bottom: 4.0625rem;
   }
 
+  &__mobile-close {
+    background-color: var(--delete);
+    margin-bottom: 1.25rem;
+    display: none;
+  }
+
   &__top {
     margin-bottom: 3.75rem;
   }
@@ -91,6 +97,49 @@
 // media queries
 @media (max-width: 998.99px) {
   .sidebar {
+    min-height: 400px;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    top: -100%;
+    left: 0;
+    display: flex;
+    align-items: center;
+    padding: 3.75rem 0;
+    transition: top 0.3s ease-in-out;
+
+    &__mobile-close {
+      display: block;
+    }
+
+    &__logo {
+      display: none;
+    }
+  }
+
+  .sidebar-active-point {
     display: none;
+  }
+}
+
+.sidebar-burger-active {
+  top: 0;
+}
+
+@media (max-height: 600.99px) and (max-width: 998.99px) {
+  .sidebar {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0;
+
+    &__mobile-close {
+      top: 40px;
+      right: 30px;
+    }
+
+    &__log-out {
+      margin: 0;
+    }
   }
 }
