--- a/src/components/UI/CreateTask/CreateTask.scss
+++ b/src/components/UI/CreateTask/CreateTask.scss
@@ -32,6 +32,7 @@
     font-size: 0.875rem;
     font-weight: bold;
     margin-bottom: 0.625rem;
+    color: var(--content-text-color);
   }
 
   &__task-input {
