--- a/src/pages/AuthenticationPage/AuthenticationPage.scss
+++ b/src/pages/AuthenticationPage/AuthenticationPage.scss
@@ -1,7 +1,8 @@
 @import "../../scss/color-vars";
 
-.sign-up {
+.login-page {
   height: 100%;
+  flex: 0 1 100%;
   padding: 1.5625rem;
   background-color: var(--white);
 
@@ -56,7 +57,7 @@
   &__registration {
     font-size: 0.875rem;
 
-    a {
+    button {
       color: var(--accent);
       text-decoration: underline;
     }
