--- a/src/pages/AuthenticationPage/AuthenticationPage.scss
+++ b/src/pages/AuthenticationPage/AuthenticationPage.scss
@@ -1,7 +1,7 @@
 @import "../../scss/color-vars";
 
 .login-page {
-  height: 100%;
+  height: 100vh;
   flex: 0 1 100%;
   padding: 1.5625rem;
   background-color: var(--white);
