--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -78,6 +78,7 @@
     min-width: 24px;
     min-height: 24px;
     background-color: var(--component-bg);
+    transition: background-color 0.3s ease-in-out;
     border-radius: 5px;
 
     &::before {
