feature: uploading profile picture
Also bug fix in WeeklyResults, before when
removing TaskItem component info about completed
and removed not decreasing and icreased, now works

--- a/src/pages/UserPage/UserPage.scss
+++ b/src/pages/UserPage/UserPage.scss
@@ -24,7 +24,8 @@
       object-fit: cover;
     }
 
-    p {
+    label {
+      cursor: pointer;
       color: var(--accent);
       text-decoration: underline;
       font-weight: 300;
