feature: display user picture in header
also renamed route type

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -32,9 +32,16 @@
     img {
       width: 2.5rem;
       height: 2.5rem;
-      object-fit: contain;
+      object-fit: cover;
       margin-left: 1.25rem;
       margin-right: 1.25rem;
+      border-radius: 50%;
+    }
+
+    svg {
+      margin-left: 1.25rem;
+      margin-right: 1.25rem;
+      border-radius: 50%;
     }
   }
 
