feature: closing modals by click exit button

--- a/src/components/UI/CreateTask/CreateTask.scss
+++ b/src/components/UI/CreateTask/CreateTask.scss
@@ -13,9 +13,41 @@
   align-items: center;
   padding: 0 2.1875rem;
 
+  &__close-button {
+    position: relative;
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 9px;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background-color: var(--delete);
+      border-radius: 5px;
+      transform: rotate(45deg);
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 9px;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background-color: var(--delete);
+      border-radius: 5px;
+      transform: rotate(-45deg);
+    }
+  }
+
   header {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     margin-bottom: 1.25rem;
     gap: 1.25rem;
 
