--- a/src/components/UI/ModalTextWindow/ModalTextWindow.scss
+++ b/src/components/UI/ModalTextWindow/ModalTextWindow.scss
@@ -14,6 +14,7 @@
   align-items: center;
 
   &__content {
+    position: relative;
     width: 300px;
   }
 
@@ -25,5 +26,45 @@
   button {
     background-color: var(--accent);
     width: 100%;
+  }
+
+  &__close-button {
+    cursor: pointer;
+    position: absolute;
+    top: -25px;
+    right: -25px;
+    width: 21px;
+    height: 21px;
+    background-color: #fff;
+    border-radius: 5px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 9px;
+      width: 100%;
+      height: 3px;
+      background-color: var(--delete);
+      border-radius: 5px;
+      transform: rotate(45deg);
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 9px;
+      width: 100%;
+      height: 3px;
+      background-color: var(--delete);
+      border-radius: 5px;
+      transform: rotate(-45deg);
+    }
+  }
+}
+
+@media (max-width: 550.99px) {
+  .modal-text-window__close-button {
+    right: 50%;
+    transform: translate(50%);
   }
 }
